# statehouse

./: .dockerignore  .editorconfig  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE_PLACEHOLDER.md  MVP_STATUS.md  README.md  SECURITY.md  devbox.json  justfile  statehouse.conf.example  statehouse.config.example
.github/workflows/: deploy-docs.yml  docker-publish.yml  python-quality.yml
crates/statehouse-core/: Cargo.toml
crates/statehouse-core/src/: lib.rs  state_machine.rs  storage.rs  types.rs
crates/statehouse-daemon/: Cargo.toml  build.rs
crates/statehouse-daemon/src/: main.rs  service.rs
crates/statehouse-proto/: Cargo.toml  LICENSE.md  build.rs
crates/statehouse-proto/src/: lib.rs
docker/: README.md
docs/: api_contract.md  architecture.md  faq.md  grpc_architecture.md  index.md  mvp_scope.md  release_checklist.md  replay_semantics.md  troubleshooting.md
docs/dev/: python-style.md
docs/operations/: cli.md  output-format.md
examples/agent_research/: README.md  agent.py  memory.py  run.sh  tools.py
packaging/: statehoused.service
proto/statehouse/v1/: statehouse.proto
python/: README.md  generate_proto.sh  pyproject.toml  statehousectl
python/docs/: CLI.md
python/statehouse/: __init__.py  client.py  exceptions.py  formatting.py  types.py
python/statehouse/_generated/statehouse/v1/: statehouse_pb2.py  statehouse_pb2.pyi  statehouse_pb2_grpc.py
python/statehouse/cli/: README.md  __init__.py  __main__.py  main.py
python/tests/: README.md  conftest.py  test_client.py  test_formatting.py
scripts/: dev.sh  package.sh  publish_python.sh  py_lint.sh  py_test.sh  test.sh
tutorials/: .gitignore  README.md  README_TESTING.md  test_tutorial_01.py  test_tutorial_02.py
tutorials/01-resumable-research-agent/: README.md  agent.py  memory.py  requirements.txt  reset.sh  run.sh  tools.py
tutorials/02-human-in-the-loop-agent/: .gitignore  README.md  agent.py  env.example  human.py  requirements.txt  reset.sh  run.sh
tutorials/_shared/: README.md  helpers.py
website/: README.md  docusaurus.config.ts  package-lock.json  package.json  sidebars.ts  tsconfig.json
website/.docusaurus/: client-manifest.json  client-modules.js  docusaurus.config.mjs  globalData.json  i18n.json  registry.js  routes.js  routesChunkNames.json
website/.docusaurus/docusaurus-plugin-content-docs/default/: __mdx-loader-dependency.json  site-docs-concepts-determinism-md-f19.json  site-docs-concepts-replay-md-75a.json  site-docs-concepts-state-and-events-md-8bd.json  site-docs-concepts-transactions-md-f05.json  site-docs-concepts-versions-md-0f8.json  site-docs-examples-audit-and-replay-md-32d.json  site-docs-examples-reference-agent-md-be0.json  site-docs-examples-resume-after-crash-md-dd2.json  site-docs-failure-modes-disk-full-md-0cd.json  site-docs-failure-modes-long-running-transactions-md-849.json  site-docs-failure-modes-partial-writes-md-37b.json  site-docs-failure-modes-process-crash-md-82d.json  site-docs-faq-md-048.json  site-docs-getting-started-first-replay-md-704.json  site-docs-getting-started-first-transaction-md-b49.json  site-docs-getting-started-installation-md-54f.json  site-docs-getting-started-running-statehoused-md-610.json  site-docs-grpc-internals-api-versioning-md-f64.json  site-docs-grpc-internals-streaming-replay-md-317.json  site-docs-grpc-internals-why-grpc-md-8f2.json  site-docs-index-md-c37.json  site-docs-introduction-design-philosophy-md-9ce.json  site-docs-introduction-what-is-statehouse-md-377.json  site-docs-introduction-when-not-to-use-md-a5b.json  site-docs-introduction-when-to-use-md-bdb.json  site-docs-license-md-ac5.json  site-docs-operations-configuration-md-7d4.json  site-docs-operations-data-directories-md-fb7.json  site-docs-operations-logging-and-metrics-md-31d.json  site-docs-operations-recovery-md-f03.json  site-docs-operations-snapshots-md-f51.json  site-docs-python-sdk-client-md-835.json  site-docs-python-sdk-errors-md-158.json  site-docs-python-sdk-overview-md-a13.json  site-docs-python-sdk-reads-md-b7a.json  site-docs-python-sdk-replay-md-521.json  site-docs-python-sdk-transactions-md-510.json
website/.docusaurus/docusaurus-plugin-content-docs/default/p/: statehouse-docs-30b.json
website/docs/: faq.md  index.md  license.md
website/docs/commercial/: future-pro.md  support.md
website/docs/concepts/: determinism.md  replay.md  state-and-events.md  transactions.md  versions.md
website/docs/examples/: audit-and-replay.md  reference-agent.md  resume-after-crash.md
website/docs/failure-modes/: disk-full.md  long-running-transactions.md  partial-writes.md  process-crash.md
website/docs/getting-started/: first-replay.md  first-transaction.md  installation.md  running-statehoused.md
website/docs/grpc-internals/: api-versioning.md  streaming-replay.md  why-grpc.md
website/docs/introduction/: design-philosophy.md  what-is-statehouse.md  when-not-to-use.md  when-to-use.md
website/docs/operations/: cli.md  configuration.md  data-directories.md  logging-and-metrics.md  recovery.md  snapshots.md
website/docs/python-sdk/: client.md  errors.md  overview.md  reads.md  replay.md  transactions.md
website/docs/tutorials/: human-in-the-loop-agent.md  overview.md  resumable-research-agent.md
website/src/css/: custom.css
website/src/pages/: index.tsx
website/static/: CNAME
