[workspace]
resolver = "2"
members = [
    "crates/statehouse-proto",
    "crates/statehouse-core",
    "crates/statehouse-daemon",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Statehouse Team"]
license-file = "LICENSE.md"
description = "Strongly consistent state and memory engine for AI agents"
repository = "https://github.com/statehouse-dev/statehouse"
homepage = "https://statehouse.dev"
documentation = "https://statehouse.dev"

[workspace.dependencies]
# gRPC
tonic = "0.12"
prost = "0.13"
prost-types = "0.13"

# Storage
rocksdb = { version = "0.22", default-features = false, features = ["snappy"] }

# Async runtime
tokio = { version = "1.40", features = ["full"] }
tokio-stream = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Utilities
uuid = { version = "1.10", features = ["v4", "serde"] }
