[package]
name = "statehouse-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license-file = "LICENSE.md"
description.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true

[dependencies]
statehouse-proto = { path = "../statehouse-proto", version = "0.1" }

# Storage
rocksdb.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Logging
tracing.workspace = true

# Utilities
uuid.workspace = true

[dev-dependencies]
tempfile = "3.8"
