[package]
name = "statehouse-daemon"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "statehoused"
path = "src/main.rs"

[dependencies]
statehouse-proto = { path = "../statehouse-proto" }
statehouse-core = { path = "../statehouse-core" }

# gRPC
tonic.workspace = true
prost.workspace = true
prost-types = "0.13"

# Serialization
serde.workspace = true
serde_json.workspace = true

# Async runtime
tokio.workspace = true
tokio-stream.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# Error handling
anyhow.workspace = true
