[package]
name = "statehouse-proto"
version.workspace = true
edition.workspace = true
authors.workspace = true
license-file = "LICENSE.md"
description.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true

[dependencies]
prost.workspace = true
prost-types.workspace = true
tonic.workspace = true
serde.workspace = true
serde_json.workspace = true

[build-dependencies]
tonic-build = "0.12"
